# interview-poc

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: forms.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
core/templates/: base.html  navbar.html
core/templates/referrals/: charts.html  home.html  upload.html
data/: people.csv  referrals.csv
interview_poc/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: models.py  tests.py  urls.py  views.py
myapp/data/: people.csv
myapp/migrations/: 0001_initial.py
myapp/templates/: base.html  navbar.html
myapp/templates/referrals/: charts.html  data.html  home.html  upload.html
myapp/utils/: csv_utils.py
myproject/: README.md  settings.py  urls.py
static/css/: bootstrap.min.css  style.css
