[tool.poetry]
name = "interview-poc"
version = "0.1.0"
description = ""
authors = ["christina.moore <christina.moore@socialfinance.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
